@@ -102,6 +102,11 @@ public interface OrderingPolicy<S extends SchedulableEntity> {
     RMContainer r);
   
   /**
+   * Demand Updated for the passed schedulableEntity, reorder if needed.
+   */
+  void demandUpdated(S schedulableEntity);
+
+  /**
    * Display information regarding configuration & status
    */
   public String getInfo();
